[package]
name = "libplanet-remotekv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.12.3"
prost = "0.13.4"
rust-rocksdb = "0.23.0"
clap = { version = "4.5.23", features = ["derive"] }

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
